Begin svg zooming module

--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,19 @@
         }
         path.active {
             fill: red !important;
-        }
+		}
+		
+		.sections {
+			display: flex;
+		}
         
     </style>
 
 </head>
 <body>
+	<div class="sections">
+
     <div class="map-wrp">
-        <?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg version="1.1"
 	 id="svg10" inkscape:version="0.92.2 (5c3e80d, 2017-08-06)" sodipodi:docname="Plan des bureaux.svg" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:svg="http://www.w3.org/2000/svg"
 	 xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 97.4 154"
@@ -1446,14 +1450,20 @@
     </div>
 
 
-    <div class="cards">
-        <div class="cards__item">
-            Employé 
-            Bureau - <span class="number"></span>
+	<div class="map-details">
 
-        </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.7.1/pixi.min.js"></script>
+		<div class="cards">
+			<div class="cards__item">
+				Employé 
+				Bureau - <span class="number"></span>
+				<button data-ui="zoom-in">Zoom in</button>
+				<button data-ui="zoom-out">Zoom out</button>
+			</div>
+		</div>
+	</div>
+</div>
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script type="module" src="/js/client/main.js"></script>
 </body>
 </html>
