Add search with fuse.js

--- a/public/index.html
+++ b/public/index.html
@@ -54349,18 +54349,19 @@
 		<div class="details-inner">
 			<header>
 				<h1>Le cartographe</h1>
-				<h2>Carte: <span data-ui="map-name">GEN</span></h2>
+				<h2>Carte: <span data-ui="map-name"></span></h2>
 			</header>
 			<form action="" class="search">
 				<div class="input-wrapper">
 					<input type="text" name="search" id="search" placeholder="Recherche">
 				</div>
 			</form>
-			<div class="cards">
-				<div class="cards__item">
-					Employé 
-					Bureau - <span class="number"></span>
-
+			<div class="cards-list">
+				<h3>Résultats :</h3>
+				<div class="cards">
+					<div class="cards__item">
+						Aucun
+					</div>
 				</div>
 			</div>
 		</div>
@@ -54369,6 +54370,7 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script src="/js/client/vendors/svg-pan-zoom.min.js"></script>
+	<script src="/js/client/vendors/fusejs.min.js"></script>
 	<script type="module" src="/js/client/main.js"></script>
 </body>
 </html>
