--- a/public/index.html
+++ b/public/index.html
@@ -54349,7 +54349,7 @@
 		<div class="details-inner">
 			<header>
 				<h1>Le cartographe</h1>
-				<h2>Carte: <span data-ui="map-name"></span></h2>
+				<h2>Carte: <span data-ui="map-name">lg2</span></h2>
 			</header>
 			<form action="" class="search">
 				<div class="input-wrapper">
