Fix search results and highlight results

--- a/public/index.html
+++ b/public/index.html
@@ -54358,11 +54358,11 @@
 			</form>
 			<div class="cards-list">
 				<h3>Résultats :</h3>
-				<div class="cards">
-					<div class="cards__item">
-						Aucun
-					</div>
-				</div>
+				<ul class="cards">
+					<li>
+						<div class="cards__item">Aucun</div>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</div>
