Place marker in map based on click

--- a/public/index.html
+++ b/public/index.html
@@ -54339,6 +54339,10 @@
 		   <path d="M955.4,684.3h0.4v-0.5h0c0.2,0.4,0.6,0.5,0.9,0.5c0.1,0,0.1,0,0.2,0v-0.4c-0.1,0-0.2,0-0.2,0c-0.5,0-0.8-0.3-0.8-0.8v-1.4
 			   h-0.5V684.3z"/>
 	   </g>
+
+	   <g style="enable-background:new;">
+			<circle cx="0" cy="0" r="10" style="fill:red;display:none;"/>
+		</g>
    </g>
    </svg>
    
