Add ui to place marker

--- a/public/index.html
+++ b/public/index.html
@@ -54368,6 +54368,29 @@
 					</li>
 				</ul>
 			</div>
+
+			<div class="admin-ui">
+				<br>
+				<br>
+				<br>
+				<h2>Admin</h2>
+				<div class="from-origin-wrp">
+					<h3>Trouver un point à partir d'une origine</h3>
+					<form action="" class="from-origin">
+						<div class="input-wrapper">
+							<input type="text" name="coords" id="coords" placeholder="Coordonnés">
+						</div>
+					</form>
+					<p>Note: L'origine est actuellement à un point du GEN</p>
+				</div>
+			
+				<div class="from-origin-wrp">
+					<h3>Ajouter un marqueur sur la carte</h3>
+					<button data-ui="add-marker">Placer un marqueur</button>
+					{# <button data-ui="add-marker">Ajouter</button>
+					<button data-ui="remove-marker">Enlever</button> #}
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
