Complete marker from origin and small refactor

--- a/public/index.html
+++ b/public/index.html
@@ -54379,9 +54379,10 @@
 					<form action="" class="from-origin">
 						<label for="coord-x">Coordonnées (m)</label>
 						<div class="input-wrapper" style="display: flex;">
-							<input type="text" name="coord-x" class="coord-x" id="coord-x" placeholder="x (m)">
-							<input type="text" name="coord-y" class="coord-y" id="coord-y" placeholder="y (m)">
+							<input type="text" name="coord-x" class="coord-x" id="coord-x" placeholder="x (m)" value="0">
+							<input type="text" name="coord-y" class="coord-y" id="coord-y" placeholder="y (m)" value="0">
 						</div>
+						<input type="submit" style="opacity: 0;">
 					</form>
 					<p>Note: L'origine est actuellement à un point du GEN</p>
 				</div>
