Add path creation in svg

--- a/public/index.html
+++ b/public/index.html
@@ -54343,6 +54343,9 @@
 	   <g style="enable-background:new;">
 			<circle cx="0" cy="0" r="10" style="fill:red;display:none;"/>
 		</g>
+	   <g style="enable-background:new;">
+			<path class="custom-path" d="" style="fill:red;"/>
+		</g>
    </g>
    </svg>
    
@@ -54390,6 +54393,16 @@
 				<div class="from-origin-wrp">
 					<h3>Ajouter un marqueur sur la carte</h3>
 					<button data-ui="add-marker">Placer un marqueur</button>
+					 <!--button data-ui="add-marker">Ajouter</button>
+					<button data-ui="remove-marker">Enlever</button-->
+				</div>
+				<div class="from-origin-wrp">
+					<br>
+					<br>
+					<h3>Créer un chemin</h3>
+					<button data-ui="add-path">Débuter</button>
+					<button data-ui="end-path">Arrêter</button>
+					<p>Cliquer à plusieurs endroits sur la carte</p>
 					 <!--button data-ui="add-marker">Ajouter</button>
 					<button data-ui="remove-marker">Enlever</button-->
 				</div>
